# routes/index.js
@@ -3,27 +3,36 @@ import {
     getUser, 
     Register,
     Login,
-    testNanoid,
     redirectOauthLogin,
     callbackOauthLogin,
+    forgotPassword,
+    resetPassword,
     logout,
+    getResetPassword,
+    profile,
 
-} from '../controller/User.js';
+} from '../controller/UserController.js';
 
 import { verifyToken } from '../middleware/VerifyToken.js';
 import { refreshToken } from '../controller/RefreshToken.js';
 import { fetchNews } from '../controller/NewsController.js';
-
+import { hardLimiter } from '../middleware/limiter.js';
 const router = express.Router();
 
 
 router.get('/news', verifyToken, fetchNews);
 router.get('/users',verifyToken, getUser);
+router.get('/profile', verifyToken, profile)
 router.post('/register', Register);
 router.post('/login', Login);
 router.get('/token', refreshToken);
 router.get('/auth/google', redirectOauthLogin);
 router.get('/auth/google/callback', callbackOauthLogin);
+
+router.post('/forgot-password', hardLimiter, forgotPassword);
+router.get('/reset-password/:id/:token', getResetPassword);
+router.post('/reset-password/:id/:token', hardLimiter, resetPassword);
+
 router.delete('/logout', logout);
 
 
@@ -37,6 +46,6 @@ router.delete('/logout', logout);
 //     }, randomTimeout)
 // })
 
-router.get('/testNanoid', testNanoid);
+
 
 export default router;
